# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.156 2005/01/26 22:11:31 wolf31o2 Exp $

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Updated for 1.1.3 release.

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-kernel.sh,
  targets/netboot/netboot-packages.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  Updated to use package.use correctly. Blame Robert Paskowitz
  <rpaskowitz@confucius.ca> from the gentoo-catalyst mailing list.

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Fixed find line for new stage1 /var/db/pkg.

  25 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added code to clean up /var/db/pkg, while still keeping the CONTENTS,
  COUNTER and ebuilds. This should keep a stage1 useable, while still keeping
  its size small.

  24 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Removed gpm changes, as it has been moved to livecd-tools and autoconfig,
  added net.ethX symlinks, and added copying of files from
  /usr/lib/hotplug/firmware into firmware tarball.

  23 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Firmware updated to use new /lib/firmware directory.

  16 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
  fix from pvdabeel@gentoo.org. patch fixes a small bug that caused grp to not
  work when both -f and -C were used on the command line.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,